Fix shimmer not working on firefox

--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -27,6 +27,7 @@
     position: relative;
     overflow: hidden;
     background-repeat: no-repeat;
+    will-change: background-position;
 }
 
 .shimmer-box {
